--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <p>
-      Welcome to the future :)
+      Welcome to the future :) <a href="/banana.html">bananers</a>
     </p>
   </body>
 </html>
