--- a/web/index.html
+++ b/web/index.html
@@ -7,11 +7,33 @@
         font: arial, sans-serif;
         color: #121212;
       }
+
+      #wrapper {
+        width: 60%;
+        margin: 10px auto;
+        margin-top: 20px;
+        padding-top: 20px;
+        border-top: 1px solid rgba(0, 0, 0, .2);
+      }
+
+      #banner {
+        padding: 20px;
+        background: yellow;
+        box-shadow: 0 0 32px rgba(0, 120, 100, .5);
+      }
     </style>
   </head>
   <body>
-    <p>
-      Welcome to the future :) <a href="/banana.html">bananers</a>
-    </p>
+    <a href="https://github.com/filp/why" style="width:151px; height:151px; position: absolute; top: 0; left: 0; border: 0;"><img src="https://s3.amazonaws.com/github/ribbons/forkme_left_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <div id="wrapper">
+      <header id="banner">
+        <h1>Holy cow!</h1>
+      </header>
+      <p>
+        Welcome to the future :)<br>
+        Here's a link to another page: <a href="/banana.html">bananers</a><br>
+        Here's a link to <b>why</b> on github: <a href="https://github.com/filp/why">filp/why</a>
+      </p>
+    </div>
   </body>
 </html>
