Fix link handling using history API

--- a/lib/asset/frame.html
+++ b/lib/asset/frame.html
@@ -47,6 +47,7 @@
                   }
 
                   getImgForPath(link[0]);
+                  history.pushState(null, null, link[0]);
                   event.preventDefault();
                   return false;
                 }
